fix: add img container for showing user avatar, add styles for alignment

--- a/src/components/pages/Profile/Profile.module.css
+++ b/src/components/pages/Profile/Profile.module.css
@@ -2,3 +2,14 @@
     margin: 8px;
     padding: 5px;
 }
+
+.containerProfile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.containerProfile img {
+    width: 216px;
+    height: 300px;
+}
